Master merger (#129)
* fixed configuration attribute FailOnUnresolvedExpression ignored by ParagraphRepeatProcessor
* removed proxy utilization in favor of MethodResolver and MethodExecutor
unified reading configuration from different classes instead of copying them
* extracted MethodExecutor from MethodResolver for fine tuning according to runtime configuration
renamed CommentProcessorMethodResolver.java since it resolves expression context methods too
* removed unused configuration from DisplayIfProcessor
fixed StandardMethodResolver when method arguments resolve to null value to make it match any type
* removed writing docx result to disk in favor of assertions in unit test

BREAKING CHANGE
* changed the way of adding comment processors, users give interfaces and class, not instances
* all comment processors have the same constructor signature

NEW FEATURE
* added TableResolver to the standard list of resolvers
* added documentation in the README for resolveTable processor

NON-BREAKING CHANGE
* fixed image bug and corresponding unit test in repeatDocPart
* renamed some utility methods and make them public
* changed exception messages in comment gathering to make errors more readable
* added missing use cases in DocumentWalker (run at Tc level was ignored by it)
* added a setDocument method on comment processor so that they can access the StoreParts
* harmonize comments removal over all comments processors
* fixed some bugs in RepeatDocPartProcessor detection of bounds for the part to repeat
* fixed issue with comment range removal for repeatDocPart
* fixed issue with comment range references removal for Tr copies for repeatTableRow
* fixed issue with comment range references removal for P copies for repeatParagraph
* added copy method on DocxStamperConfiguration
* added DocxStamperConfiguration copy method for repeatDocPart
* removed comment anchors from copied paragraphs in ParagraphRepeatProcessor
* added a test case mixing repea